--- a/cf_units/meta.yaml
+++ b/cf_units/meta.yaml
@@ -3,8 +3,8 @@ package:
     version: "1.1.3"
 
 source:
-    git_url: https://github.com/SciTools/cf_units.git
-    git_tag: v1.1.3
+    git_url: https://github.com/djkirkham/cf_units.git
+    git_tag: df0605ef15173411fb7edd9cd85ff54ecb106e57
 
 build:
     number: 0
@@ -12,6 +12,8 @@ build:
 requirements:
     build:
         - python
+        - cython
+        - udunits2
     run:
         - python
         - six
