--- a/cf_units/meta.yaml
+++ b/cf_units/meta.yaml
@@ -4,7 +4,7 @@ package:
 
 source:
     git_url: https://github.com/djkirkham/cf_units.git
-    git_tag: f9f226325e73968691544457a1400d1f52a4619e
+    git_tag: cythonize_udunits2
 
 build:
     number: 0
@@ -14,6 +14,8 @@ requirements:
         - python
         - cython
         - udunits2
+        - numpy
+        - setuptools
     run:
         - python
         - six
