--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,7 +59,7 @@ install:
     - cmd: set PYTHONUNBUFFERED=1
 
     - cmd: conda list
-    - cmd: conda install --yes ruamel ruamel-yaml
+    - cmd: conda install --yes ruamel_yaml
     - cmd: conda list
     - cmd: conda install --yes --force python=3.5
     - cmd: conda list
